--- a/app/src/main/res/layout/activity_register_view.xml
+++ b/app/src/main/res/layout/activity_register_view.xml
@@ -11,17 +11,32 @@
     android:padding="40dp">
     >
     <!-- back icon and title text -->
-    
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/backIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_baseline_arrow_back_24" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:textSize="30sp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="-50dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+        </LinearLayout>
+
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
@@ -29,20 +44,59 @@
         android:hint="Username"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"/>
-    <EditText
-        android:id="@+id/password"
+    <!-- input with visibility toggle -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
-    <EditText
-        android:id="@+id/confirmPassword"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:inputType="textPassword"/>
+        <ImageButton
+            android:id="@+id/visibilityToggle"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="-40dp"
+            android:src="@drawable/ic_outline_visibility_off_24"
+            android:padding="35dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"/>
+    </LinearLayout>
+    <!-- input with visibility toggle -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Confirm Password"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Confirm Password"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:inputType="textPassword"/>
+        <ImageButton
+            android:id="@+id/visibilityToggleConfirm"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="-40dp"
+            android:src="@drawable/ic_outline_visibility_off_24"
+            android:padding="35dp"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
@@ -50,14 +104,28 @@
         android:text="Continue"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"/>
-    <TextView
-        android:id="@+id/loginLink"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already have an account? Login"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account?"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/toLoginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:textStyle="bold"/>
+    </LinearLayout>
     <!-- group horizontal -->
     <LinearLayout
         android:layout_width="match_parent"
