--- a/app/src/main/res/layout/activity_wholesaler_orders.xml
+++ b/app/src/main/res/layout/activity_wholesaler_orders.xml
@@ -1,148 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="10dp"
-    app:cardCornerRadius="20dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:backgroundTint="#F1E8FD"
-    android:layout_margin="25dp">
-    |
-    <LinearLayout
+    android:layout_height="match_parent"
+    tools:context=".WholesalerOrdersActivity">
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="Accepted Orders"
+        android:textSize="25dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"/>
 
-        <ImageView
-            android:id="@+id/textViewItemImage"
-            android:layout_width="123dp"
-            android:layout_height="166dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/check" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/recyclerViewCartAccepted"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-            <TextView
-                android:id="@+id/textViewItemNameValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Orden #1"
-                android:textSize="30dp"
-                android:textColor="@color/black"
-                android:textStyle="bold"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="7dp"
-                android:layout_marginLeft="10dp">
-                <TextView
-                    android:id="@+id/textViewItemPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pending Orders"
+        android:textSize="25dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"/>
 
-                    android:textColor="@color/purple_500"
-                    android:textStyle="bold"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/recyclerViewCartPending"/>
 
-                    android:text="Price: "
-                    android:textSize="17dp"/>
-                <TextView
-                    android:id="@+id/textViewItemPriceValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-
-                    android:text="$140"
-                    android:textSize="17dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="7dp"
-                android:layout_marginLeft="10dp">
-                <TextView
-                    android:id="@+id/textViewItemQuantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textColor="@color/purple_500"
-                    android:textStyle="bold"
-
-                    android:text="Quantity: "
-                    android:textSize="17dp"/>
-                <TextView
-                    android:id="@+id/textViewItemQuantityValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-
-                    android:text="13"
-                    android:textSize="17dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="7dp"
-                android:layout_marginLeft="10dp">
-                <TextView
-                    android:id="@+id/textViewItemTotalPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textColor="@color/purple_500"
-                    android:textStyle="bold"
-
-                    android:text="Total: "
-                    android:textSize="17dp"/>
-                <TextView
-                    android:id="@+id/textViewItemTotalPriceValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-
-                    android:text="$1820"
-                    android:textSize="17dp"/>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="right"
-            android:layout_gravity="bottom">
-
-            <ImageButton
-                android:id="@+id/imageButtonRemoveItem"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/round_button_v2"
-                android:src="@drawable/ic_outline_delete_24"
-                app:tint="@color/white" />
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
