Add: Button to Routes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,25 @@
             android:id="@+id/toWholesalerProducts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="To Cart"
+            android:text="To Wholesaler Products"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/toWholesalerOrders"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To Wholesaler Orders"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/toRetailSellerProducts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To Retailseller Products"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
