--- a/app/src/main/res/layout/activity_retail_seller_cart.xml
+++ b/app/src/main/res/layout/activity_retail_seller_cart.xml
@@ -7,10 +7,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RetailSellerCartActivity">
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/recyclerViewCart"/>
     <Button
         android:layout_width="200dp"
