--- a/app/src/main/res/layout/activity_retail_seller_products.xml
+++ b/app/src/main/res/layout/activity_retail_seller_products.xml
@@ -10,29 +10,34 @@
     tools:context=".RetailSellerProductsActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Hola, Alex"
         android:textSize="30dp"
-        android:textStyle="italic"
+        android:text="@string/text_style"
         android:textColor="@color/black"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="20dp"/>
 
     <EditText
-        android:layout_width="260dp"
+        android:layout_width="360dp"
         android:layout_height="40dp"
         android:hint="Search"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/black"/>
+        android:background="@drawable/round_edit_text"
+        android:textAlignment="center"
+        android:textColor="@color/black" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/recyclerViewProducts"/>
 
 
