--- a/app/src/main/res/layout/activity_wholesaler_products.xml
+++ b/app/src/main/res/layout/activity_wholesaler_products.xml
@@ -27,6 +27,6 @@
         android:src="@drawable/ic_baseline_add_24"
         app:fabSize="mini"
         android:backgroundTint="#673ab7"
-        />
+        android:id="@+id/btnGoToAddProduct"/>
 
 </RelativeLayout>
