--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -48,7 +48,8 @@
             app:fabSize="mini"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_baseline_edit_24"
-            android:backgroundTint="#FFEC00"/>
+            android:backgroundTint="#FFEC00"
+            android:id="@+id/btnGoToEditProduct"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
