--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_marginBottom="30dp" />
 
     </LinearLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--<LinearLayout
         android:layout_width="match_parent"
@@ -119,7 +119,4 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>-->
