--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,47 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="10"
-    android:gravity="center_horizontal"
-    tools:context=".HomeActivity"
-    android:orientation="horizontal">
+    tools:context=".MainActivity"
+    android:layout_marginHorizontal="40dp">
 
-    <!-- Logo, login and register buttons -->
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="8"
-        android:layout_margin="20dp"
-        android:layout_gravity="center">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:src="@drawable/ic_launcher_background"
-            android:background="@drawable/image_profile"
-            />
+            android:layout_marginBottom="20dp"
+            android:src="@drawable/logo_ksero"/>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:layout_margin="20dp"
-            android:padding="17dp"
             android:id="@+id/btnLogin"
-            />
+            android:text="Login" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
-            android:layout_margin="20dp"
-            android:padding="17dp"
             android:id="@+id/btnRegister"
-            />
+            android:text="Register" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp" />
+
     </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
