--- a/app/src/main/res/layout/activity_register_view.xml
+++ b/app/src/main/res/layout/activity_register_view.xml
@@ -15,24 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/backIcon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_baseline_arrow_back_24" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Register"
             android:textSize="30sp"
             android:gravity="center"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="-50dp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
         </LinearLayout>
@@ -42,7 +31,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"/>
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"/>
     <!-- input with visibility toggle -->
     <LinearLayout
@@ -54,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:inputType="textPassword"/>
         <ImageButton
@@ -80,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:inputType="textPassword"/>
         <ImageButton
@@ -103,29 +99,8 @@
         android:layout_height="wrap_content"
         android:text="RetailSeller"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Already have an account?"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/toLoginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:textStyle="bold"/>
-    </LinearLayout>
+        android:layout_marginBottom="10dp"/>
+
     <!-- group horizontal -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -159,7 +134,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Wholesaler"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginTop="20dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account?"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/toLoginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:textStyle="bold"/>
+    </LinearLayout>
 
 </LinearLayout>
