--- a/app/src/main/res/layout/item_wholesaler_orders.xml
+++ b/app/src/main/res/layout/item_wholesaler_orders.xml
@@ -30,8 +30,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/textViewItemNameValue"
                 android:layout_width="wrap_content"
