--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -14,7 +14,7 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="210dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp">
@@ -42,22 +42,31 @@
 
         </LinearLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:fabSize="mini"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_baseline_edit_24"
-            android:backgroundTint="#FFEC00"
-            android:id="@+id/btnGoToEditProduct"/>
+            android:orientation="horizontal"
+            android:gravity="right"
+            android:layout_gravity="bottom">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="mini"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_baseline_edit_24"
+                android:backgroundTint="#FFEC00"
+                android:id="@+id/btnGoToEditProduct"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fabSize="mini"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_outline_delete_24"
-            android:backgroundTint="#FF0000"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fabSize="mini"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_outline_delete_24"
+                android:backgroundTint="#FF0000"/>
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
