--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -10,63 +10,76 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:text="Name:"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:paddingVertical="4dp"/>
 
-            <TextView
-                android:id="@+id/txtTitleWholesalerProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="16dp" />
+        <TextView
+            android:id="@+id/txtTitleWholesalerProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="12dp"/>
 
-            <TextView
-                android:id="@+id/txtDescriptionWholesalerProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="16dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description:"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:paddingVertical="4dp"/>
 
-            <TextView
-                android:id="@+id/txtPriceWholesalerProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="16dp" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/txtDescriptionWholesalerProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="12dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price:"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:paddingVertical="4dp"/>
+        <TextView
+            android:id="@+id/txtPriceWholesalerProduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="12dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:gravity="right"
-            android:layout_gravity="bottom">
+            android:orientation="horizontal">
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnGoToEditProduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fabSize="mini"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_baseline_edit_24"
                 android:backgroundTint="#FFEC00"
-                android:id="@+id/btnGoToEditProduct"/>
+                android:src="@drawable/ic_baseline_edit_24"
+                app:fabSize="mini" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fabSize="mini"
                 android:layout_gravity="center_vertical"
+                android:backgroundTint="#FF0000"
                 android:src="@drawable/ic_outline_delete_24"
-                android:backgroundTint="#FF0000"/>
+                app:fabSize="mini" />
         </LinearLayout>
-
-
 
     </LinearLayout>
 
