--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -5,40 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".EditProduct"
-    android:orientation="vertical"
-    android:layout_gravity="center">
+    android:orientation="vertical">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/logo_ksero"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name of Product"
-        android:textSize="12dp"
-        android:layout_margin="40dp"
+        android:textSize="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="40dp"
         android:id="@+id/txtEditProductName" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description of Product"
-        android:textSize="12dp"
-        android:layout_margin="40dp"
+        android:textSize="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="40dp"
         android:id="@+id/txtEditProductDescription" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Price of Product"
-        android:textSize="12dp"
-        android:layout_margin="40dp"
+        android:textSize="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="40dp"
         android:id="@+id/txtEditProductPrice"
         android:inputType="numberDecimal"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save"
-        android:layout_gravity="center"
         android:textSize="12dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginHorizontal="40dp"
         android:backgroundTint="#673ab7"
         android:id="@+id/btnEditProduct"/>
 
