--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -16,8 +16,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text="Name:"
-            android:textSize="12dp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
 
@@ -26,13 +28,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="12dp"/>
+            android:textSize="13dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text="Description:"
-            android:textSize="12dp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
 
@@ -41,12 +45,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="12dp"/>
+            android:textSize="13dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text="Price:"
-            android:textSize="12dp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
         <TextView
@@ -54,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="12dp"/>
+            android:textSize="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,6 +76,7 @@
                 android:layout_gravity="center_vertical"
                 android:backgroundTint="#FFEC00"
                 android:src="@drawable/ic_baseline_edit_24"
+                android:layout_marginRight="15dp"
                 app:fabSize="mini" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
