--- a/app/src/main/res/layout/fragment_retail_orders.xml
+++ b/app/src/main/res/layout/fragment_retail_orders.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RetailOrdersFragment">
+    tools:context=".RetailOrdersFragment"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="20dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Orders"
-            android:gravity="center"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+        <Button
+            android:id="@+id/btnAccepted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Accepted Orders"
             android:textStyle="bold"
-            android:textSize="20sp" />
-
+            android:textSize="15sp"
+            android:textColor="@color/purple_700"
+            style="?android:attr/borderlessButtonStyle" />
+        <Button
+            android:id="@+id/btnPending"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pending Orders"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/recyclerViewCartAccepted"/>
+
+</LinearLayout>
