--- a/app/src/main/res/layout/fragment_wholesaler_settings.xml
+++ b/app/src/main/res/layout/fragment_wholesaler_settings.xml
@@ -23,11 +23,13 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/btnProfile"
             android:text="My Profile" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/btnLogout"
             android:text="Logout" />
     </LinearLayout>
 
