--- a/app/src/main/res/layout/item_wholesaler_product.xml
+++ b/app/src/main/res/layout/item_wholesaler_product.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     android:layout_margin="20dp"
-    app:cardCornerRadius="40dp"
-    android:backgroundTint="#DEC7FD">
+    app:cardCornerRadius="40dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,9 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/name"
-            android:textSize="18sp"
+            android:layout_marginLeft="10dp"
+            android:text="Name:"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
 
@@ -29,17 +28,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text=""
-            android:textSize="13sp"/>
+            android:textSize="13dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text="Description:"
-            android:textSize="18sp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
 
@@ -48,16 +47,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text=""
-            android:textSize="13sp"/>
+            android:textSize="13dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text="Price:"
-            android:textSize="18sp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:paddingVertical="4dp"/>
         <TextView
@@ -65,9 +64,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
             android:text=""
-            android:textSize="10sp"/>
+            android:textSize="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,7 +82,7 @@
                 android:layout_gravity="center_vertical"
                 android:backgroundTint="#FFEC00"
                 android:src="@drawable/ic_baseline_edit_24"
-                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
                 app:fabSize="mini" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
